# content-crawler

./: .env.example  .gitignore  CLAUDE.md  README.md  content_pipeline_plan.md  pyproject.toml
.github/workflows/: daily.yml  weekly.yml
config/: feeds.yaml  keywords.yaml  prompts.yaml  telegram_channels.yaml
src/: analytics.py  config.py  cost_tracker.py  logging_config.py  main.py  models.py
src/collectors/: arxiv_collector.py  base.py  rss_collector.py  telegram_collector.py
src/delivery/: telegram_bot.py
src/filters/: ai_scorer.py  keyword_filter.py
src/storage/: db.py
tests/: conftest.py  test_models.py
tests/fixtures/: sample_rss.xml  sample_tme_page.html
tests/test_collectors/: test_rss_collector.py  test_telegram_collector.py
tests/test_delivery/: test_telegram_bot.py
tests/test_filters/: test_cost_tracker.py  test_keyword_filter.py
tests/test_storage/: test_db.py
